@@ -1,6 +1,9 @@
 Version 1.22.4 *
 ==================
 - Fixed incomplete list of files to search in, e.g. when search in `This Project` was selected.
+- Fixed shortcuts `F11` and `Shift-F11` shouldn't work when the assigned button is disabled.
+- Fixed empty entries in the Project Explorer when the base directory has been changed.
+- Fixed when the working or base directory doesn't exist, the project options should show the path in red.
 
 Version 1.22.3
 ==================
